# vfe-demo

./: CMakeLists.txt  EarthMantle.cxx  LICENSE  Ocean.cxx  README.md  vtkCriticalLinesExtractor.cxx  vtkCriticalLinesExtractor.h  vtkIsoLineExtractor.cxx  vtkIsoLineExtractor.h
variational/: CMakeLists.txt
variational/include/variational/: DoubleBufferedLine.h  Gradient.h  SimpleAdam.h  StoppingCriteria.h
variational/src/: SimpleAdam.cxx
